name:                nanovg
version:             0.1.0.1
synopsis:            Haskell bindings for nanovg
description:         Raw bindings to the OpenGL vector graphics library NanoVG
homepage:            https://github.com/cocreature/haskell-nanovg
license:             ISC
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           2016 Moritz Kiefer
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
source-repository head
  type:     git
  location: https://github.com/cocreature/nanovg


library
  exposed-modules:     NanoVG
                       NanoVG.Internal
  build-depends:       base >=4.8 && <4.9
                     , bytestring
                     , containers
                     , linear
                     , text
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  include-dirs:        nanovg/src
                       cbits
  includes:            nanovg.h
                       nanovg_gl.h
                       nanovg_wrapper.h
  c-sources:           nanovg/src/nanovg.c
                       cbits/nanovg_wrapper.c
                       cbits/nanovg_gl.c
  cc-options:          -DNDEBUG
  ghc-options:         -Wall
  extra-libraries:     GLU, GL, m, GLEW

executable example00
  hs-source-dirs:     example
  main-is:            Example.hs
  build-depends:      base
                    , containers
                    , gl
                    , GLFW-b
                    , linear
                    , monad-loops
                    , nanovg
                    , text
                    , transformers
                    , vector
  default-language:   Haskell2010
  c-sources:          cbits/glew.c

test-suite nanovg-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  other-modules:      NanoVGSpec
                      Contexts
  main-is:            Spec.hs
  build-depends:      base
                    , containers
                    , hspec
                    , inline-c
                    , linear
                    , nanovg
                    , QuickCheck
  default-language:   Haskell2010
  c-sources:          test/NanoVGSpec.c